# rusty-iptv

./: .gitignore
.github/workflows/: ci.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  build_rust.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/rustyiptv/: MainActivity.kt
android/app/src/main/kotlin/com/rustyiptv/bridge/: CoreBridge.kt  CoreViewModel.kt
android/app/src/main/kotlin/com/rustyiptv/ui/: AppNavigation.kt  ChannelBrowserScreen.kt  HomeScreen.kt  PlayerScreen.kt  SearchScreen.kt
android/app/src/main/res/drawable/: app_banner.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
android/app/src/main/res/mipmap-xhdpi/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
core/: Cargo.toml  build.rs
core/src/: api.rs  epg.rs  lib.rs  m3u.rs  models.rs  rusty_iptv.udl  storage.rs  xtream.rs
